--- a/login/Login.css
+++ b/login/Login.css
@@ -13,10 +13,11 @@ button{
     border-radius: 10px;
     padding: 20px;
     margin:10px;
-    color: white;
-    background: blue;
+    color: black;
+    background: rgb(255, 255, 255);
     cursor: pointer;
     width: 350px;
+    font-size:larger;
 }
 #buttons{
 
@@ -39,18 +40,32 @@ input{
 a{
     font-family: 'Times New Roman', Times, serif;
     font-size: small;
+    position: relative;
+    left: 260px;
     text-decoration: none;
     color: black;
 }
 #block{
-    box-shadow: 15px 15px 10px black;
+
+    position: relative;
+    left: 25%;
     border-radius: 10%;
     width: 350px;
-    background-color: white;
+    background-color: yellow;
     padding: 50px;
+
 }
 button:hover{
     box-shadow: 5px 5px 4px rgb(0, 0, 0);
     background-color: rgb(0, 0, 211);
     color: white;
+}
+button:active{
+
+    background-color: rgb(27, 27, 247);
+    transform: translateX(10px) translateY(10px) ;
+}
+
+#block:hover{
+    box-shadow: 15px 15px 15px rgb(0, 0, 0);
 }
