--- a/index/index.css
+++ b/index/index.css
@@ -27,6 +27,7 @@ h1{
     margin: 10px;
     margin-left: 20px;
     font-family: 'Protest Strike', sans-serif;
+    font-size: x-large;
     color: yellow;
     text-shadow: 10px 10px 5px black;
     cursor: pointer;
